--- a/media/locales/cs/seafile-editor.json
+++ b/media/locales/cs/seafile-editor.json
@@ -1,126 +1,126 @@
 {
-  "bold": "Tučně",
-  "italic": "Kurzíva",
-  "inline_code": "Kód",
-  "header_one": "Záhlaví 1",
-  "header_two": "Záhlaví 2",
-  "header_three": "Záhlaví 3",
-  "header_four": "Záhlaví 4",
-  "header_five": "Záhlaví 5",
-  "header_six": "Záhlaví 6",
-  "paragraph": "Odstavec",
-  "quote": "Citace",
-  "ordered_list": "Číslovaný seznam",
-  "unordered_list": "Nečíslovaný seznam",
-  "check_list_item": "Zkontrolovat položku seznamu",
-  "insert_image": "Vložit obrázek",
-  "insert_formula": "Insert Formula",
-  "formula": "Formula",
-  "insert_file": "Vložit soubor",
-  "code": "Řádkový kód",
-  "code_block": "Blok kódu",
-  "insert_link": "Vložit odkaz",
-  "insert_table": "Vložit tabulku",
-  "save": "Uložit",
-  "more": "Více",
-  "invalid_url": "Chybná URL",
-  "link_address": "Adresa odkazu",
-  "image_address": "Adresa obrázku",
-  "submit": "Odeslat",
-  "cancel": "Storno",
-  "switch_to_plain_text_editor": "Přepnout do textového editoru",
-  "switch_to_rich_text_editor": "Přepnout do rozšířeného textového editoru",
-  "switch_to_viewer": "Přepnout do značkovacího prohlížeče",
-  "help": "Pomoc",
-  "remove_table": "Odebrat tabulku",
-  "column": "Sloupec",
-  "row": "Řádek",
-  "Insert_Row_Before": "Vložit řádku před",
-  "Insert_Row_After": "Vložit řádek za",
-  "Insert_Column_Before": "Vložit sloupec před",
-  "Insert_Column_After": "Vložit sloupec za",
-  "Remove_Row": "Odstranit řádek",
-  "Remove_Column": "Odstranit sloupec",
-  "Insert_Row": "Vložit řádek",
-  "Insert_Column": "Vložit sloupec",
-  "set_align": "Nastavit zarovnání",
-  "left": "Vlevo",
-  "center": "Střed",
-  "right": "Vpravo",
-  "file_saved": "Soubor uložen",
-  "file_failed_to_save": "Soubor nebyl uložen",
-  "star": "Přidat hvězdičku",
-  "unstar": "Odebrat hvězdičku",
-  "back_to_parent_directory":"Zpět do nadřazeného adresáře",
-  "edit": "Upravit",
-  "copy": "Kopírovat",
-  "copied": "Zkopírováno",
-  "internal_link": "Interní odkaz",
-  "copy_internal_link": "Interní odkaz byl zkopírován do schránky",
-  "internal_link_desc": "Interní odkaz směřuje na soubor nebo složku u které má uživatel oprávnění ke čtení.",
-  "share": "Sdílet",
-  "share_link": "Veřejný odkaz",
-  "generate": "Generovat",
-  "add_password_protection": "Přidat ochranu heslem",
-  "password": "Heslo",
-  "at_least_8_characters": "nejméně 8 znaků",
-  "password_again": "Heslo znovu",
-  "add_auto_expiration": "Přidat automatickou expiraci",
-  "days": "dní",
-  "please_enter_password": "Zadejte heslo",
-  "greater_than_or_equal_to": "Vyšší nebo rovno",
-  "less_than_or_equal_to": "Nižší nebo rovno",
-  "set_permission": "Nastavit oprávnění",
-  "preview_and_download": "Zobrazit a stáhnout",
-  "preview_only": "Pouze zobrazit",
-  "please_enter_valid_days": "Zadejte platné dny",
-  "please_enter_a_non-negative_integer": "Vložte prosím nezáporné celé číslo",
-  "please_enter_days": "Prosím zadejte dny",
-  "password_is_too_short": "Heslo je příliš krátké.",
-  "passwords_do_not_match": "Hesla nesouhlasí",
-  "return_to_wiki_page": "Návrat na stránku Wiki",
-  "insert_network_image": "Vložit síťový obrázek",
-  "upload_local_image": "Nahrát lokální obrázek",
-  "add_link": "Přidat odkaz",
-  "file_history": "Historie souboru",
-  "history_version": "Historie verzí",
-  "back_to_viewer": "Zpět na prohlížeč",
-  "link_title": "Název odkazu",
-  "local_draft": "Místní koncept",
-  "use_draft": "Použít koncept",
-  "delete_draft": "Smazat koncept",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "Máte neuložený koncept. Chcete ho použít?",
-  "local_draft_saved": "Místní koncept byl uložen",
-  "new_draft": "Nový návrh",
-  "view_draft": "Zobrazit koncept",
-  "publish": "Zveřejnit",
-  "this_file_has_a_draft": "Tento soubor má koncept.", 
-  "delete": "Smazat",
-  "comments": "Komentáře",
-  "add_a_comment": "Přidat komentář…",
-  "no_comment_yet": "Žádné komentáře",
+  "Bold": "Tučně",
+  "Italic": "Kurzíva",
+  "Inline_code": "Kód",
+  "Header_one": "Záhlaví 1",
+  "Header_two": "Záhlaví 2",
+  "Header_three": "Záhlaví 3",
+  "Header_four": "Záhlaví 4",
+  "Header_five": "Záhlaví 5",
+  "Header_six": "Záhlaví 6",
+  "Paragraph": "Odstavec",
+  "Quote": "Citace",
+  "Ordered_list": "Číslovaný seznam",
+  "Unordered_list": "Nečíslovaný seznam",
+  "Check_list_item": "Zkontrolovat položku seznamu",
+  "Insert_image": "Vložit obrázek",
+  "Insert_formula": "Insert Formula",
+  "Formula": "Formula",
+  "Insert_file": "Vložit soubor",
+  "Code": "Řádkový kód",
+  "Code_block": "Blok kódu",
+  "Insert_link": "Vložit odkaz",
+  "Insert_table": "Vložit tabulku",
+  "Save": "Uložit",
+  "More": "Více",
+  "Invalid_url": "Chybná URL",
+  "Link_address": "Adresa odkazu",
+  "Image_address": "Adresa obrázku",
+  "Submit": "Odeslat",
+  "Cancel": "Storno",
+  "Switch_to_plain_text_editor": "Přepnout do textového editoru",
+  "Switch_to_rich_text_editor": "Přepnout do rozšířeného textového editoru",
+  "Switch_to_viewer": "Přepnout do značkovacího prohlížeče",
+  "Help": "Pomoc",
+  "Remove_table": "Odebrat tabulku",
+  "Column": "Sloupec",
+  "Row": "Řádek",
+  "Insert_row_before": "Insert row before",
+  "Insert_row_after": "Insert row after",
+  "Insert_column_before": "Insert column before",
+  "Insert_column_after": "Insert column after",
+  "Remove_row": "Remove row",
+  "Remove_column": "Remove column",
+  "Insert_row": "Insert row",
+  "Insert_column": "Insert column",
+  "Set_align": "Nastavit zarovnání",
+  "Left": "Vlevo",
+  "Center": "Střed",
+  "Right": "Vpravo",
+  "File_saved": "Soubor uložen",
+  "File_failed_to_save": "Soubor nebyl uložen",
+  "Star": "Přidat hvězdičku",
+  "Unstar": "Odebrat hvězdičku",
+  "Back_to_parent_directory": "Zpět do nadřazeného adresáře",
+  "Edit": "Upravit",
+  "Copy": "Kopírovat",
+  "Copied": "Zkopírováno",
+  "Internal_link": "Interní odkaz",
+  "Copy_internal_link": "Interní odkaz byl zkopírován do schránky",
+  "Internal_link_desc": "Interní odkaz směřuje na soubor nebo složku u které má uživatel oprávnění ke čtení.",
+  "Share": "Sdílet",
+  "Share_link": "Veřejný odkaz",
+  "Generate": "Generovat",
+  "Add_password_protection": "Přidat ochranu heslem",
+  "Password": "Heslo",
+  "At_least_8_characters": "nejméně 8 znaků",
+  "Password_again": "Heslo znovu",
+  "Add_auto_expiration": "Přidat automatickou expiraci",
+  "Days": "dní",
+  "Please_enter_password": "Zadejte heslo",
+  "Greater_than_or_equal_to": "Vyšší nebo rovno",
+  "Less_than_or_equal_to": "Nižší nebo rovno",
+  "Set_permission": "Nastavit oprávnění",
+  "Preview_and_download": "Zobrazit a stáhnout",
+  "Preview_only": "Pouze zobrazit",
+  "Please_enter_valid_days": "Zadejte platné dny",
+  "Please_enter_a_non-negative_integer": "Vložte prosím nezáporné celé číslo",
+  "Please_enter_days": "Prosím zadejte dny",
+  "Password_is_too_short": "Heslo je příliš krátké.",
+  "Passwords_do_not_match": "Hesla nesouhlasí",
+  "Return_to_wiki_page": "Návrat na stránku Wiki",
+  "Insert_network_image": "Vložit síťový obrázek",
+  "Upload_local_image": "Nahrát lokální obrázek",
+  "Add_link": "Přidat odkaz",
+  "File_history": "Historie souboru",
+  "History_version": "Historie verzí",
+  "Back_to_viewer": "Zpět na prohlížeč",
+  "Link_title": "Název odkazu",
+  "Local_draft": "Místní koncept",
+  "Use_draft": "Použít koncept",
+  "Delete_draft": "Smazat koncept",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "Máte neuložený koncept. Chcete ho použít?",
+  "Local_draft_saved": "Místní koncept byl uložen",
+  "New_draft": "Nový návrh",
+  "View_draft": "Zobrazit koncept",
+  "Publish": "Zveřejnit",
+  "This_file_has_a_draft": "Tento soubor má koncept.",
+  "Delete": "Smazat",
+  "Comments": "Komentáře",
+  "Add_a_comment": "Přidat komentář…",
+  "No_comment_yet": "Žádné komentáře",
   "Mark_as_Resolved": "Označit jako vyřešené",
-  "ask_for_review": "Požádat o kontrolu",
-  "review_already_exists": "Kontrola již existuje. ",
-  "view_review": "Zobrazit kontrolu",
-  "there_is_an_associated_review_with_this_file": "K tomuto souboru je přiřazená kontrola",
-  "start_review": "Začít kontrolu",
-  "this_file_is_in_draft_stage": "Tento soubor je ve fázi návrhu.",
-  "this_file_is_in_review_stage": "Tento soubor je ve fázi kontroly.",
-  "this_file_has_been_updated": "Tento soubor byl aktualizován.",
-  "refresh": "Obnovit",
-  "related_files": "související soubory",
-  "related_file": "související soubor",
-  "no_tags": "Žádné značky",
+  "Ask_for_review": "Požádat o kontrolu",
+  "Review_already_exists": "Kontrola již existuje. ",
+  "View_review": "Zobrazit kontrolu",
+  "There_is_an_associated_review_with_this_file": "K tomuto souboru je přiřazená kontrola",
+  "Start_review": "Začít kontrolu",
+  "This_file_is_in_draft_stage": "Tento soubor je ve fázi návrhu.",
+  "This_file_is_in_review_stage": "Tento soubor je ve fázi kontroly.",
+  "This_file_has_been_updated": "Tento soubor byl aktualizován.",
+  "Refresh": "Obnovit",
+  "Related_files": "související soubory",
+  "Related_file": "související soubor",
+  "No_tags": "Žádné značky",
   "Date": "Datum",
   "Participants": "Účastníci",
   "Meeting_note": "Poznámky ze schůzky",
   "Chooser_document_type": "Výběr typu dokumentu",
   "Empty": "Prázdný",
-  "no_related_files": "Žádné související soubory",
-  "no_out_line": "Bez obrysu",
+  "No_related_files": "Žádné související soubory",
+  "No_out_line": "Bez obrysu",
   "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Úpravy souborů v tomto prohlížeči mohou způsobit malé problémy se zobrazením.",
-  "no_document_improvement_suggestion": "Žádný návrh na zlepšení dokumentu",
+  "No_document_improvement_suggestion": "Žádný návrh na zlepšení dokumentu",
   "Hide_side_panel": "Skrýt postranní panel",
   "Show_side_panel": "Zobrazit postranní panel",
   "Show_resolved_comments": "Zobrazit vyřešené komentáře",
@@ -131,30 +131,21 @@
   "Insert_library_image": "Vložit obrázek knihovny",
   "Size": "Velikost",
   "Location": "Umístění",
-  "Last_Update": "Poslední aktualizace",
+  "Last_update": "Last update",
   "Tags": "Štítky",
-  "Related_Files": "Související soubory",
   "Add_participants": "Přidat účastníky",
-  "markdownLint": {
-    "missing_h1": {
-      "description": "V dokumentu není žádný h1",
-      "issue" : "Chybí h1"
-    },
-    "heading_end_with_colon": {
-      "description": "Koncová interpunkce v záhlaví by neměla být dvojtečka",
-      "issue": "Záhlaví končí dvojtečkou"
-    },
-    "heading_increase_irregular": {
-      "description": "Úrovně nadpisů by se měly zvyšovat vždy pouze o jednu úroveň",
-      "issue": "Problém s úrovní nadpisu"
-    }
-  },
+  "Clear_format": "Clear format",
+  "Image_address_invalid": "Image address invalid",
   "Shortcut_help": "Shortcut help",
+  "Link_address_required": "Link address required",
+  "Link_address_invalid": "Link address invalid",
+  "Link_title_required": "Link title required",
+  "Blank_title_not_allowed": "Blank title not allowed",
   "userHelp": {
     "title": "Klávesové zkratky",
     "userHelpData": [
       {
-        "shortcutType":"Seznam zkratek",
+        "shortcutType": "Seznam zkratek",
         "shortcutData": {
           "Make_list": "Vytvořit seznam",
           "Make_ordered_list": "Vytvořit číslovaný seznam",
@@ -162,7 +153,8 @@
           "Insert_child_in_item": "Vložit podpoložku",
           "Increase_depth": "Zvýšit hloubku"
         }
-      }, {
+      },
+      {
         "shortcutType": "Zkratky záhlaví",
         "shortcutData": {
           "Heading_1": "Záhlaví 1",
@@ -172,7 +164,8 @@
           "Heading_5": "Záhlaví 5",
           "Heading_6": "Záhlaví 6"
         }
-      }, {
+      },
+      {
         "shortcutType": "Zkratky bloků kódu",
         "shortcutData": {
           "Make_code_block": "Vytvořit blok kódu",
@@ -180,37 +173,43 @@
           "Escape_code_block": "Opustit blok kódu",
           "Insert_indent": "Vložit odrážku"
         }
-      }, {
+      },
+      {
         "shortcutType": "Zkratky bloku citace",
         "shortcutData": {
-          "Make_Block_quote": "Vytvořit blokovou citaci",
-          "Escape_Block_quote": "Opustit blokovou citaci"
+          "Make_block_quote": "Make block quote",
+          "Escape_block_quote": "Escape block quote"
         }
-      }, {
+      },
+      {
         "shortcutType": "Zkratky tabulky",
         "shortcutData": {
-          "Insert_Table_Row": "Vložit řádku tabulky",
+          "Insert_table_row": "Insert table tow",
           "Escape_table": "Opustit tabulku"
         }
-      }, {
+      },
+      {
         "shortcutType": "Zkratky vzorečku",
         "shortcutData": {
-          "Insert_Formula": "Insert Formula"
+          "Insert_formula": "Insert formula"
         }
-      }, {
-        "shortcutType":"Řádkové zkratky",
+      },
+      {
+        "shortcutType": "Řádkové zkratky",
         "shortcutData": {
           "Bold": "Tučně",
           "Italic": "Kurzíva",
-          "Italic_Bold": "Tučná kurzíva",
+          "Italic_bold": "Italic bold",
           "Inline_code": "Řádkový kód"
         }
-      }, {
+      },
+      {
         "shortcutType": "Uložit zkratky",
         "shortcutData": {
           "Save_file": "Uložit soubor"
         }
-      }, {
+      },
+      {
         "shortcutType": "Zkratky obrázku",
         "shortcutData": {
           "Paste_screen_shot": "Vložit snímek obrazovky",
@@ -218,5 +217,7 @@
         }
       }
     ]
-  }
+  },
+  "Select_field": "Select field",
+  "Font_style": "Font style"
 }
