--- a/media/locales/de/seafile-editor.json
+++ b/media/locales/de/seafile-editor.json
@@ -1,126 +1,126 @@
 {
-  "bold": "Fett",
-  "italic": "Kursiv",
-  "inline_code": "Code",
-  "header_one": "Überschrift 1",
-  "header_two": "Überschrift 2",
-  "header_three": "Überschrift 3",
-  "header_four": "Überschrift 4",
-  "header_five": "Überschrift 5",
-  "header_six": "Überschrift 6",
-  "paragraph": "Absatz",
-  "quote": "Blockquote",
-  "ordered_list": "Nummerierte Liste",
-  "unordered_list": "Ungeordnete Liste",
-  "check_list_item": "Checkbox Liste",
-  "insert_image": "Bild",
-  "insert_formula": "Formel einfügen",
-  "formula": "Formel",
-  "insert_file": "Datei",
-  "code": "Inline-Code",
-  "code_block": "Codeblock",
-  "insert_link": "Link",
-  "insert_table": "Tabelle",
-  "save": "Speichern",
-  "more": "Mehr",
-  "invalid_url": "Ungültige Adresse",
-  "link_address": "Link-URL",
-  "image_address": "Bild-URL",
-  "submit": "Absenden",
-  "cancel": "Abbrechen",
-  "switch_to_plain_text_editor": "Zum Plain Text Editor wechseln",
-  "switch_to_rich_text_editor": "Zum Rich Text Editor wechseln",
-  "switch_to_viewer": "Zur Markdown-Vorschau wechseln",
-  "help": "Hilfe",
-  "remove_table": "Tabelle entfernen",
-  "column": "Spalte",
-  "row": "Zeile",
-  "Insert_Row_Before": "Zeile darüber einfügen",
-  "Insert_Row_After": "Zeile darunter einfügen",
-  "Insert_Column_Before": "Spalte links einfügen",
-  "Insert_Column_After": "Spalte rechts einfügen",
-  "Remove_Row": "Zeile entfernen",
-  "Remove_Column": "Spalte entfernen",
-  "Insert_Row": "Zeile einfügen",
-  "Insert_Column": "Spalte einfügen",
-  "set_align": "Ausrichtung festlegen",
-  "left": "Links",
-  "center": "Zentrieren",
-  "right": "Rechts",
-  "file_saved": "Die Datei wurde gespeichert.",
-  "file_failed_to_save": "Die Datei konnte nicht gespeichert werden.",
-  "star": "Zu Favoriten hinzufügen",
-  "unstar": "Aus Favoriten entfernen",
-  "back_to_parent_directory":"Zurück zum übergeordneten Verzeichnis",
-  "edit": "Bearbeiten",
-  "copy": "Kopieren",
-  "copied": "Kopiert",
-  "internal_link": "Internen Link anzeigen",
-  "copy_internal_link": "Der interne Link wurde in die Zwischenablage kopiert.",
-  "internal_link_desc": "Interne Links sind Verweise auf Dateien bzw. Ordner, die nur von Benutzer/innen mit mindestens Leserechten für die Dateien bzw. Ordner genutzt werden können. Interne Links eignen sich insbesondere für die interne Kommunikation in Ticket-/CRM-Systemen sowie E-Mails und Chats.",
-  "share": "Freigeben",
-  "share_link": "Download-Link",
-  "generate": "Erstellen",
-  "add_password_protection": "Passwort hinzufügen",
-  "password": "Passwort",
-  "at_least_8_characters": "mindestens 8 Zeichen",
-  "password_again": "Passwort erneut eingeben",
-  "add_auto_expiration": "Befristung hinzufügen",
-  "days": "Tage",
-  "please_enter_password": "Bitte geben Sie ein Passwort ein",
-  "greater_than_or_equal_to": "Größer oder gleich",
-  "less_than_or_equal_to": "Weniger oder gleich",
-  "set_permission": "Rechte festlegen",
-  "preview_and_download": "Vorschau und Herunterladen",
-  "preview_only": "Nur Vorschau erlaubt",
-  "please_enter_valid_days": "Bitte geben Sie eine gültige Anzahl von Tagen ein",
-  "please_enter_a_non-negative_integer": "Bitte geben Sie eine Zahl größer oder gleich Null ein",
-  "please_enter_days": "Bitte geben Sie Tage ein",
-  "password_is_too_short": "Passwort ist zu kurz",
-  "passwords_do_not_match": "Passwörter stimmen nicht überein",
-  "return_to_wiki_page": "Zurück zur Wiki-Seite",
-  "insert_network_image": "Bild per URL einfügen",
-  "upload_local_image": "Bild hochladen und einfügen",
-  "add_link": "Link hinzufügen",
-  "file_history": "Dateiversionen",
-  "history_version": "Versionen",
-  "back_to_viewer": "Zurück zur Vorschau",
-  "link_title": "Linktext",
-  "local_draft": "Lokaler Entwurf",
-  "use_draft": "Entwurf verwenden",
-  "delete_draft": "Entwurf löschen",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "Es gibt einen ungespeicherten Entwurf. Möchten Sie ihn verwenden?",
-  "local_draft_saved": "Lokaler Entwurf gespeichert",
-  "new_draft": "Neuer Entwurf",
-  "view_draft": "Entwurf anzeigen",
-  "publish": "Veröffentlichen",
-  "this_file_has_a_draft": "Zu dieser Datei gibt es einen Entwurf.", 
-  "delete": "Löschen",
-  "comments": "Kommentare",
-  "add_a_comment": "Kommentar einfügen",
-  "no_comment_yet": "Keine Kommentare vorhanden",
+  "Bold": "Fett",
+  "Italic": "Kursiv",
+  "Inline_code": "Code",
+  "Header_one": "Überschrift 1",
+  "Header_two": "Überschrift 2",
+  "Header_three": "Überschrift 3",
+  "Header_four": "Überschrift 4",
+  "Header_five": "Überschrift 5",
+  "Header_six": "Überschrift 6",
+  "Paragraph": "Absatz",
+  "Quote": "Blockquote",
+  "Ordered_list": "Nummerierte Liste",
+  "Unordered_list": "Ungeordnete Liste",
+  "Check_list_item": "Checkbox Liste",
+  "Insert_image": "Bild",
+  "Insert_formula": "Formel einfügen",
+  "Formula": "Formel",
+  "Insert_file": "Datei",
+  "Code": "Inline-Code",
+  "Code_block": "Codeblock",
+  "Insert_link": "Link",
+  "Insert_table": "Tabelle",
+  "Save": "Speichern",
+  "More": "Mehr",
+  "Invalid_url": "Ungültige Adresse",
+  "Link_address": "Link-URL",
+  "Image_address": "Bild-URL",
+  "Submit": "Speichern",
+  "Cancel": "Abbrechen",
+  "Switch_to_plain_text_editor": "Zum Plain Text Editor wechseln",
+  "Switch_to_rich_text_editor": "Zum Rich Text Editor wechseln",
+  "Switch_to_viewer": "Zur Markdown-Vorschau wechseln",
+  "Help": "Hilfe",
+  "Remove_table": "Tabelle entfernen",
+  "Column": "Spalte",
+  "Row": "Zeile",
+  "Insert_row_before": "Insert row before",
+  "Insert_row_after": "Insert row after",
+  "Insert_column_before": "Insert column before",
+  "Insert_column_after": "Insert column after",
+  "Remove_row": "Remove row",
+  "Remove_column": "Remove column",
+  "Insert_row": "Insert row",
+  "Insert_column": "Insert column",
+  "Set_align": "Ausrichtung festlegen",
+  "Left": "Links",
+  "Center": "Zentrieren",
+  "Right": "Rechts",
+  "File_saved": "Die Datei wurde gespeichert.",
+  "File_failed_to_save": "Die Datei konnte nicht gespeichert werden.",
+  "Star": "Zu Favoriten hinzufügen",
+  "Unstar": "Aus Favoriten entfernen",
+  "Back_to_parent_directory": "Zurück zum übergeordneten Verzeichnis",
+  "Edit": "Bearbeiten",
+  "Copy": "Kopieren",
+  "Copied": "Kopiert",
+  "Internal_link": "Internen Link anzeigen",
+  "Copy_internal_link": "Der interne Link wurde in den Zwischenspeicher kopiert.",
+  "Internal_link_desc": "Interne Links sind Verweise auf Dateien bzw. Ordner, die nur von Benutzer/innen mit mindestens Leserechten für die Dateien bzw. Ordner genutzt werden können. Interne Links eignen sich insbesondere für die interne Kommunikation in Ticket-/CRM-Systemen sowie E-Mails und Chats.",
+  "Share": "Freigeben",
+  "Share_link": "Download-Link",
+  "Generate": "Erstellen",
+  "Add_password_protection": "Passwort hinzufügen",
+  "Password": "Passwort",
+  "At_least_8_characters": "mindestens 8 Zeichen",
+  "Password_again": "Passwort erneut eingeben",
+  "Add_auto_expiration": "Befristung hinzufügen",
+  "Days": "Tage",
+  "Please_enter_password": "Bitte geben Sie ein Passwort ein",
+  "Greater_than_or_equal_to": "Größer oder gleich",
+  "Less_than_or_equal_to": "Weniger oder gleich",
+  "Set_permission": "Berechtigung festlegen",
+  "Preview_and_download": "Vorschau und Herunterladen",
+  "Preview_only": "Nur Vorschau erlaubt",
+  "Please_enter_valid_days": "Bitte geben Sie eine gültige Anzahl von Tagen ein",
+  "Please_enter_a_non-negative_integer": "Bitte geben Sie eine Zahl größer oder gleich Null ein",
+  "Please_enter_days": "Bitte geben Sie Tage ein",
+  "Password_is_too_short": "Das Passwort ist zu kurz",
+  "Passwords_do_not_match": "Passwörter stimmen nicht überein",
+  "Return_to_wiki_page": "Zurück zur Wiki-Seite",
+  "Insert_network_image": "Bild per URL einfügen",
+  "Upload_local_image": "Bild hochladen und einfügen",
+  "Add_link": "Link hinzufügen",
+  "File_history": "Dateiversionen",
+  "History_version": "Versionen",
+  "Back_to_viewer": "Zurück zur Vorschau",
+  "Link_title": "Linktext",
+  "Local_draft": "Lokaler Entwurf",
+  "Use_draft": "Entwurf verwenden",
+  "Delete_draft": "Entwurf löschen",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "Es gibt einen ungespeicherten Entwurf. Möchten Sie ihn verwenden?",
+  "Local_draft_saved": "Lokaler Entwurf gespeichert",
+  "New_draft": "Neuer Entwurf",
+  "View_draft": "Entwurf anzeigen",
+  "Publish": "Veröffentlichen",
+  "This_file_has_a_draft": "Zu dieser Datei gibt es einen Entwurf.",
+  "Delete": "Löschen",
+  "Comments": "Kommentare",
+  "Add_a_comment": "Kommentar einfügen",
+  "No_comment_yet": "Keine Kommentare vorhanden",
   "Mark_as_Resolved": "Als erledigt markieren",
-  "ask_for_review": "Um ein Review bitten",
-  "review_already_exists": "Es gibt bereits ein Review.",
-  "view_review": "Review anzeigen",
-  "there_is_an_associated_review_with_this_file": "Es gibt ein Review zu dieser Datei.",
-  "start_review": "Review schreiben",
-  "this_file_is_in_draft_stage": "Die Datei hat den Status Entwurf",
-  "this_file_is_in_review_stage": "Die Datei hat den Status Review.",
-  "this_file_has_been_updated": "Die Datei wurde aktualisiert.",
-  "refresh": "Aktualisieren",
-  "related_files": "Zugehörige Dateien",
-  "related_file": "Zugehörige Datei",
-  "no_tags": "Keine Tags",
+  "Ask_for_review": "Um ein Review bitten",
+  "Review_already_exists": "Es gibt bereits ein Review.",
+  "View_review": "Review anzeigen",
+  "There_is_an_associated_review_with_this_file": "Es gibt ein Review zu dieser Datei.",
+  "Start_review": "Review schreiben",
+  "This_file_is_in_draft_stage": "Die Datei hat den Status Entwurf",
+  "This_file_is_in_review_stage": "Die Datei hat den Status Review.",
+  "This_file_has_been_updated": "Die Datei wurde aktualisiert.",
+  "Refresh": "Aktualisieren",
+  "Related_files": "Zugehörige Dateien",
+  "Related_file": "Zugehörige Datei",
+  "No_tags": "Keine Tags",
   "Date": "Datum",
   "Participants": "Teilnehmer",
   "Meeting_note": "Besprechungsnotiz",
   "Chooser_document_type": "Auswahl Dokumenttyp",
   "Empty": "Leer",
-  "no_related_files": "Keine zugehörigen Dateien",
-  "no_out_line": "Keine Gliederung",
+  "No_related_files": "Keine zugehörigen Dateien",
+  "No_out_line": "Keine Gliederung",
   "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Beim Bearbeiten von Dateien in diesem Browser können leichte Probleme bei der Anzeige auftreten.",
-  "no_document_improvement_suggestion": "Keine Vorschläge zur Verbesserung des Dokuments",
+  "No_document_improvement_suggestion": "Keine Vorschläge zur Verbesserung des Dokuments",
   "Hide_side_panel": "Seitenleiste verbergen",
   "Show_side_panel": "Seitenleiste anzeigen",
   "Show_resolved_comments": "Erledigte Kommentare anzeigen",
@@ -131,30 +131,21 @@
   "Insert_library_image": "Bild aus Bibliothek einfügen",
   "Size": "Größe",
   "Location": "Ort",
-  "Last_Update": "Letzte Änderung",
+  "Last_update": "Last update",
   "Tags": "Tags",
-  "Related_Files": "Zugehörige Dateien",
   "Add_participants": "Teilnehmer hinzufügen",
-  "markdownLint": {
-    "missing_h1": {
-      "description": "Es gibt keine Hauptüberschrift (h1) in dem Text",
-      "issue" : "Hauptüberschrift (h1) fehlt"
-    },
-    "heading_end_with_colon": {
-      "description": "Überschriften dürfen nicht mit einem Doppelpunkt enden.",
-      "issue": "Überschrift endet mit einem Doppelpunkt"
-    },
-    "heading_increase_irregular": {
-      "description": "Überschriften sollten in aufeinander folgenden Stufen angelegt werden",
-      "issue": "Stufe der Überschrift überprüfen"
-    }
-  },
+  "Clear_format": "Clear format",
+  "Image_address_invalid": "Image address invalid",
   "Shortcut_help": "Hilfe Tastenkombinationen",
+  "Link_address_required": "Link address required",
+  "Link_address_invalid": "Link address invalid",
+  "Link_title_required": "Link title required",
+  "Blank_title_not_allowed": "Blank title not allowed",
   "userHelp": {
     "title": "Tastenkombinationen",
     "userHelpData": [
       {
-        "shortcutType":"Listen",
+        "shortcutType": "Listen",
         "shortcutData": {
           "Make_list": "Ungeordnete Liste anlegen",
           "Make_ordered_list": "Nummerierte Liste anlegen",
@@ -162,7 +153,8 @@
           "Insert_child_in_item": "Textzeile einfügen",
           "Increase_depth": "Einzug erhöhen"
         }
-      }, {
+      },
+      {
         "shortcutType": "Überschriften",
         "shortcutData": {
           "Heading_1": "Überschrift 1",
@@ -172,7 +164,8 @@
           "Heading_5": "Überschrift 5",
           "Heading_6": "Überschrift 6"
         }
-      }, {
+      },
+      {
         "shortcutType": "Codeblock",
         "shortcutData": {
           "Make_code_block": "Codeblock anlegen",
@@ -180,37 +173,43 @@
           "Escape_code_block": "Codeblock beenden",
           "Insert_indent": "Einzug erhöhen"
         }
-      }, {
+      },
+      {
         "shortcutType": "Blockquote",
         "shortcutData": {
-          "Make_Block_quote": "Blockquote einfügen",
-          "Escape_Block_quote": "Blockquote beenden"
+          "Make_block_quote": "Make block quote",
+          "Escape_block_quote": "Escape block quote"
         }
-      }, {
+      },
+      {
         "shortcutType": "Tabellen",
         "shortcutData": {
-          "Insert_Table_Row": "Tabellenzeile einfügen",
+          "Insert_table_row": "Insert table tow",
           "Escape_table": "Tabelle beenden"
         }
-      }, {
+      },
+      {
         "shortcutType": "Formeln",
         "shortcutData": {
-          "Insert_Formula": "Formel einfügen"
+          "Insert_formula": "Insert formula"
         }
-      }, {
-        "shortcutType":"Textformatierung",
+      },
+      {
+        "shortcutType": "Textformatierung",
         "shortcutData": {
           "Bold": "Fett",
           "Italic": "Kursiv",
-          "Italic_Bold": "Kursiv fett",
+          "Italic_bold": "Italic bold",
           "Inline_code": "Inline-Code"
         }
-      }, {
+      },
+      {
         "shortcutType": "Speichern",
         "shortcutData": {
           "Save_file": "Datei speichern"
         }
-      }, {
+      },
+      {
         "shortcutType": "Bilder",
         "shortcutData": {
           "Paste_screen_shot": "Bild aus Zwischenablage einfügen",
@@ -218,5 +217,7 @@
         }
       }
     ]
-  }
+  },
+  "Select_field": "Select field",
+  "Font_style": "Font style"
 }
