--- a/media/locales/it/seafile-editor.json
+++ b/media/locales/it/seafile-editor.json
@@ -1,126 +1,126 @@
 {
-  "bold": "Grassetto",
-  "italic": "Corsivo",
-  "inline_code": "Codice",
-  "header_one": "Titolo 1",
-  "header_two": "Titolo 2",
-  "header_three": "Titolo 3",
-  "header_four": "Titolo 4",
-  "header_five": "Intestazione 5",
-  "header_six": "Intestazione 6",
-  "paragraph": "Paragrafo",
-  "quote": "Citazione",
-  "ordered_list": "Lista ordinata",
-  "unordered_list": "Lista non ordinata",
-  "check_list_item": "Controlla la voce dell'elenco",
-  "insert_image": "Inserisci Immagine",
-  "insert_formula": "Insert Formula",
-  "formula": "Formula",
-  "insert_file": "Insert File",
-  "code": "Codice in linea",
-  "code_block": "Codice",
-  "insert_link": "Inserisci Collegamento",
-  "insert_table": "Inserisci tabella",
-  "save": "Salvare",
-  "more": "Altro",
-  "invalid_url": "URL non valida",
-  "link_address": "Indirizzo collegamento",
-  "image_address": "Indirizzo Immagine",
-  "submit": "Invia",
-  "cancel": "Annulla",
-  "switch_to_plain_text_editor": "Passa all'Editor di testo semplice",
-  "switch_to_rich_text_editor": "Passa all'Editor di testo formattato",
-  "switch_to_viewer": "Passa alla vista di tipo Markdown",
-  "help": "Aiuto",
-  "remove_table": "Rimuovere Tabella",
-  "column": "Colonna",
-  "row": "Riga",
-  "Insert_Row_Before": "Insert Row Before",
-  "Insert_Row_After": "Insert Row After",
-  "Insert_Column_Before": "Insert Column Before",
-  "Insert_Column_After": "Insert Column After",
-  "Remove_Row": "Remove Row",
-  "Remove_Column": "Remove Column",
-  "Insert_Row": "Insert Row",
-  "Insert_Column": "Insert Column",
-  "set_align": "Imposta allineamento",
-  "left": "Sinistra",
-  "center": "Centrato",
-  "right": "Destra",
-  "file_saved": "File salvato.",
-  "file_failed_to_save": "Errore salvataggio file.",
-  "star": "Aggiungi asterisco",
-  "unstar": "Rimozione asterisco",
-  "back_to_parent_directory":"Torna alla cartella precedente",
-  "edit": "Modifica",
-  "copy": "Copia",
-  "copied": "Copiato",
-  "internal_link": "Collegamento interno",
-  "copy_internal_link": "Il collegamento interno è stato copiato negli appunti",
-  "internal_link_desc": "Un collegamento interno è un collegamento a un file o una cartella a cui gli utenti possono accedere con autorizzazione di lettura al file o alla cartella.",
-  "share": "Condividi",
-  "share_link": "Condividi Collegamento",
-  "generate": "Generare",
-  "add_password_protection": "Aggiungi la protezione password",
-  "password": "Password",
-  "at_least_8_characters": "almeno 8 caratteri",
-  "password_again": "Ridigita password",
-  "add_auto_expiration": "Aggiungi la scadenza automatica",
-  "days": "giorni",
-  "please_enter_password": "Per favore, inserisci la password",
-  "greater_than_or_equal_to": "Maggiore o uguale a ",
-  "less_than_or_equal_to": "Minore o uguale  a",
-  "set_permission": "Imposta permessi",
-  "preview_and_download": "Anteprima e scarica",
-  "preview_only": "Solo Anteprima",
-  "please_enter_valid_days": "Si prega di inserire giorni validi",
-  "please_enter_a_non-negative_integer": "Prego inserire un intero non negativo",
-  "please_enter_days": "Prego inserire i giorni",
-  "password_is_too_short": "La password è troppo corta",
-  "passwords_do_not_match": "Le password non corrispondono",
-  "return_to_wiki_page": "Torna alla pagina Wiki",
-  "insert_network_image": "Inserisci immagine di rete",
-  "upload_local_image": "Inserisci immagine locale",
-  "add_link": "Aggiungi collegamento",
-  "file_history": "Cronologia dei file",
-  "history_version": "Versioni cronologia",
-  "back_to_viewer": "Torma alla vista",
-  "link_title": "Link al titolo",
-  "local_draft": "Bozza locale",
-  "use_draft": "Usa bozza",
-  "delete_draft": "Rimuovi Bozza",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "Hai una bozza non salvata. La vuoi utilizzare?",
-  "local_draft_saved": "Bozza salvata in locale",
-  "new_draft": "Nuova Bozza",
-  "view_draft": "Bozza",
-  "publish": "Pubblica",
-  "this_file_has_a_draft": "Questo file è una bozza", 
-  "delete": "Elimina",
-  "comments": "Commenti",
-  "add_a_comment": "Aggiungi un commento...",
-  "no_comment_yet": "Ancora nessun commento.",
+  "Bold": "Grassetto",
+  "Italic": "Corsivo",
+  "Inline_code": "Codice",
+  "Header_one": "Titolo 1",
+  "Header_two": "Titolo 2",
+  "Header_three": "Titolo 3",
+  "Header_four": "Titolo 4",
+  "Header_five": "Intestazione 5",
+  "Header_six": "Intestazione 6",
+  "Paragraph": "Paragrafo",
+  "Quote": "Citazione",
+  "Ordered_list": "Lista ordinata",
+  "Unordered_list": "Lista non ordinata",
+  "Check_list_item": "Controlla la voce dell'elenco",
+  "Insert_image": "Inserisci Immagine",
+  "Insert_formula": "Insert Formula",
+  "Formula": "Formula",
+  "Insert_file": "Insert File",
+  "Code": "Codice in linea",
+  "Code_block": "Codice",
+  "Insert_link": "Inserisci Collegamento",
+  "Insert_table": "Inserisci tabella",
+  "Save": "Salvare",
+  "More": "Altro",
+  "Invalid_url": "URL non valida",
+  "Link_address": "Indirizzo collegamento",
+  "Image_address": "Indirizzo Immagine",
+  "Submit": "Invia",
+  "Cancel": "Annulla",
+  "Switch_to_plain_text_editor": "Passa all'Editor di testo semplice",
+  "Switch_to_rich_text_editor": "Passa all'Editor di testo formattato",
+  "Switch_to_viewer": "Passa alla vista di tipo Markdown",
+  "Help": "Aiuto",
+  "Remove_table": "Rimuovere Tabella",
+  "Column": "Colonna",
+  "Row": "Riga",
+  "Insert_row_before": "Insert row before",
+  "Insert_row_after": "Insert row after",
+  "Insert_column_before": "Insert column before",
+  "Insert_column_after": "Insert column after",
+  "Remove_row": "Remove row",
+  "Remove_column": "Remove column",
+  "Insert_row": "Insert row",
+  "Insert_column": "Insert column",
+  "Set_align": "Imposta allineamento",
+  "Left": "Sinistra",
+  "Center": "Centrato",
+  "Right": "Destra",
+  "File_saved": "File salvato.",
+  "File_failed_to_save": "Errore salvataggio file.",
+  "Star": "Aggiungi asterisco",
+  "Unstar": "Rimozione asterisco",
+  "Back_to_parent_directory": "Torna alla cartella precedente",
+  "Edit": "Modifica",
+  "Copy": "Copia",
+  "Copied": "Copiato",
+  "Internal_link": "Collegamento interno",
+  "Copy_internal_link": "Il collegamento interno è stato copiato negli appunti",
+  "Internal_link_desc": "Un collegamento interno è un collegamento a un file o una cartella a cui gli utenti possono accedere con autorizzazione di lettura al file o alla cartella.",
+  "Share": "Condividi",
+  "Share_link": "Condividi Collegamento",
+  "Generate": "Generare",
+  "Add_password_protection": "Aggiungi la protezione password",
+  "Password": "Password",
+  "At_least_8_characters": "almeno 8 caratteri",
+  "Password_again": "Ridigita password",
+  "Add_auto_expiration": "Aggiungi la scadenza automatica",
+  "Days": "giorni",
+  "Please_enter_password": "Per favore, inserisci la password",
+  "Greater_than_or_equal_to": "Maggiore o uguale a ",
+  "Less_than_or_equal_to": "Minore o uguale  a",
+  "Set_permission": "Imposta permessi",
+  "Preview_and_download": "Anteprima e download",
+  "Preview_only": "Solo Anteprima",
+  "Please_enter_valid_days": "Si prega di inserire giorni validi",
+  "Please_enter_a_non-negative_integer": "Prego inserire un intero non negativo",
+  "Please_enter_days": "Prego inserire i giorni",
+  "Password_is_too_short": "La password è troppo corta",
+  "Passwords_do_not_match": "Le password non corrispondono",
+  "Return_to_wiki_page": "Torna alla pagina Wiki",
+  "Insert_network_image": "Inserisci immagine di rete",
+  "Upload_local_image": "Inserisci immagine locale",
+  "Add_link": "Aggiungi collegamento",
+  "File_history": "Cronologia dei file",
+  "History_version": "Versioni cronologia",
+  "Back_to_viewer": "Torma alla vista",
+  "Link_title": "Link al titolo",
+  "Local_draft": "Bozza locale",
+  "Use_draft": "Usa bozza",
+  "Delete_draft": "Rimuovi Bozza",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "Hai una bozza non salvata. La vuoi utilizzare?",
+  "Local_draft_saved": "Bozza salvata in locale",
+  "New_draft": "Nuova Bozza",
+  "View_draft": "Bozza",
+  "Publish": "Pubblica",
+  "This_file_has_a_draft": "Questo file è una bozza",
+  "Delete": "Elimina",
+  "Comments": "Commenti",
+  "Add_a_comment": "Aggiungi un commento...",
+  "No_comment_yet": "Ancora nessun commento.",
   "Mark_as_Resolved": "Mark as Resolved",
-  "ask_for_review": "Richiedi una revisione",
-  "review_already_exists": "Revisione già esistente",
-  "view_review": "Visualizza revisione",
-  "there_is_an_associated_review_with_this_file": "C'è una recensione associata con questo file.",
-  "start_review": "Inizia Revisione",
-  "this_file_is_in_draft_stage": "Questo file è in fase di bozza.",
-  "this_file_is_in_review_stage": "Questo file è in fase di revisione.",
-  "this_file_has_been_updated": "Questo file è stato aggiornato.",
-  "refresh": "Aggiornare",
-  "related_files": "file correlati",
-  "related_file": "file correlato",
-  "no_tags": "Nessun tag",
+  "Ask_for_review": "Richiedi una revisione",
+  "Review_already_exists": "Revisione già esistente",
+  "View_review": "Visualizza revisione",
+  "There_is_an_associated_review_with_this_file": "C'è una recensione associata con questo file.",
+  "Start_review": "Inizia Revisione",
+  "This_file_is_in_draft_stage": "Questo file è in fase di bozza.",
+  "This_file_is_in_review_stage": "Questo file è in fase di revisione.",
+  "This_file_has_been_updated": "Questo file è stato aggiornato.",
+  "Refresh": "Aggiornare",
+  "Related_files": "file correlati",
+  "Related_file": "file correlato",
+  "No_tags": "Nessun tag",
   "Date": "Data",
   "Participants": "Participants",
   "Meeting_note": "Meeting note",
   "Chooser_document_type": "Chooser document type",
   "Empty": "Vuoto",
-  "no_related_files": "Nessun file correlato",
-  "no_out_line": "No outline",
+  "No_related_files": "Nessun file correlato",
+  "No_out_line": "No outline",
   "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
-  "no_document_improvement_suggestion": "No document improvement suggestion",
+  "No_document_improvement_suggestion": "No document improvement suggestion",
   "Hide_side_panel": "Hide side panel",
   "Show_side_panel": "Show side panel",
   "Show_resolved_comments": "Mostra commenti risolti",
@@ -131,30 +131,21 @@
   "Insert_library_image": "Insert library image",
   "Size": "Dimensione",
   "Location": "Posizione",
-  "Last_Update": "Ultimo aggiornamento",
+  "Last_update": "Last update",
   "Tags": "Tag",
-  "Related_Files": "File correlati",
   "Add_participants": "Add participants",
-  "markdownLint": {
-    "missing_h1": {
-      "description": "There is no h1 in the document",
-      "issue" : "Missing h1"
-    },
-    "heading_end_with_colon": {
-      "description": "Trailing punctuation in heading should not be a colon",
-      "issue": "Heading ends width colon"
-    },
-    "heading_increase_irregular": {
-      "description": "Heading levels should only increment by one level at a time",
-      "issue": "Heading level issue"
-    }
-  },
+  "Clear_format": "Clear format",
+  "Image_address_invalid": "Image address invalid",
   "Shortcut_help": "Shortcut help",
+  "Link_address_required": "Link address required",
+  "Link_address_invalid": "Link address invalid",
+  "Link_title_required": "Link title required",
+  "Blank_title_not_allowed": "Blank title not allowed",
   "userHelp": {
     "title": "Tasti rapidi",
     "userHelpData": [
       {
-        "shortcutType":"Elenca scorciatoie",
+        "shortcutType": "Elenca scorciatoie",
         "shortcutData": {
           "Make_list": "Crea elenco",
           "Make_ordered_list": "Crea elenco ordinato",
@@ -162,7 +153,8 @@
           "Insert_child_in_item": "Inserisci un elemento figlio sotto questo elemento",
           "Increase_depth": "Aumenta la profondità"
         }
-      }, {
+      },
+      {
         "shortcutType": "Scorciatoie principali",
         "shortcutData": {
           "Heading_1": "Titolo 1",
@@ -172,7 +164,8 @@
           "Heading_5": "Intestazione 5",
           "Heading_6": "Intestazione 6"
         }
-      }, {
+      },
+      {
         "shortcutType": "Scorciatoie di codice",
         "shortcutData": {
           "Make_code_block": "Crea un blocco di codice",
@@ -180,37 +173,43 @@
           "Escape_code_block": "Codice di escape",
           "Insert_indent": "Inserisci indentazione"
         }
-      }, {
+      },
+      {
         "shortcutType": "Blocco scorciatoie di citazione",
         "shortcutData": {
-          "Make_Block_quote": "Crea blocco citazioni",
-          "Escape_Block_quote": "Escape Blocco Codice"
+          "Make_block_quote": "Make block quote",
+          "Escape_block_quote": "Escape block quote"
         }
-      }, {
+      },
+      {
         "shortcutType": "Scorciatoie Tabella",
         "shortcutData": {
-          "Insert_Table_Row": "Inserisci riga nella tabella",
+          "Insert_table_row": "Insert table tow",
           "Escape_table": "Escape tabella"
         }
-      }, {
+      },
+      {
         "shortcutType": "Formula shortcuts",
         "shortcutData": {
-          "Insert_Formula": "Insert Formula"
+          "Insert_formula": "Insert formula"
         }
-      }, {
-        "shortcutType":"Scorciatoie in linea",
+      },
+      {
+        "shortcutType": "Scorciatoie in linea",
         "shortcutData": {
           "Bold": "Grassetto",
           "Italic": "Corsivo",
-          "Italic_Bold": "Corsivo Grassetto",
+          "Italic_bold": "Italic bold",
           "Inline_code": "Codice in linea"
         }
-      }, {
+      },
+      {
         "shortcutType": "Salva scorciatoie",
         "shortcutData": {
           "Save_file": "Salva file"
         }
-      }, {
+      },
+      {
         "shortcutType": "Scorciatoie per le immagini",
         "shortcutData": {
           "Paste_screen_shot": "Incolla la schermata",
@@ -218,5 +217,7 @@
         }
       }
     ]
-  }
+  },
+  "Select_field": "Select field",
+  "Font_style": "Font style"
 }
