--- a/media/locales/es/seafile-editor.json
+++ b/media/locales/es/seafile-editor.json
@@ -1,126 +1,126 @@
 {
-  "bold": "Negrita",
-  "italic": "Itálica",
-  "inline_code": "Código",
-  "header_one": "Encabezado 1",
-  "header_two": "Encabezado 2",
-  "header_three": "Encabezado 3",
-  "header_four": "Encabezado 4",
-  "header_five": "Encabezado 5",
-  "header_six": "Encabezado 6",
-  "paragraph": "Párrafo",
-  "quote": "Cita",
-  "ordered_list": "Lista Ordenada",
-  "unordered_list": "Lista Desordenada",
-  "check_list_item": "Check List Item",
-  "insert_image": "Insertar Imagen",
-  "insert_formula": "Insertar Fórmula",
-  "formula": "Fórmula",
-  "insert_file": "Insertar Archivo",
-  "code": "Inline Code",
-  "code_block": "Bloque de Código",
-  "insert_link": "Insertar Enlace",
-  "insert_table": "Insertar Tabla",
-  "save": "Guardar",
-  "more": "Más",
-  "invalid_url": "URL Inválida",
-  "link_address": "Dirección del enlace",
-  "image_address": "Dirección de la imagen",
-  "submit": "Enviar",
-  "cancel": "Cancelar",
-  "switch_to_plain_text_editor": "Cambiar a editor de texto sin formato",
-  "switch_to_rich_text_editor": "Cambiar a editor de texto enriquecido",
-  "switch_to_viewer": "Cambiar a visualizador Markdown",
-  "help": "Ayuda",
-  "remove_table": "Eliminar tabla",
-  "column": "Columna",
-  "row": "Fila",
-  "Insert_Row_Before": "Insertar Línea Antes",
-  "Insert_Row_After": "Insertar Línea Después",
-  "Insert_Column_Before": "Insertar Columna Antes",
-  "Insert_Column_After": "Insertar Columna Después",
-  "Remove_Row": "Eliminar Fila",
-  "Remove_Column": "Eliminar Columna",
-  "Insert_Row": "Insertar Fila",
-  "Insert_Column": "Insertar Columna",
-  "set_align": "Establecer alineación",
-  "left": "Izquierda",
-  "center": "Centrar",
-  "right": "derecha",
-  "file_saved": "Archivo guardado",
-  "file_failed_to_save": "Fallo al guardar archivo",
-  "star": "Add star",
-  "unstar": "Remove star",
-  "back_to_parent_directory":"Volver a la carpeta superior",
-  "edit": "Editar",
-  "copy": "Copiar",
-  "copied": "Copiado",
-  "internal_link": "Enlace interno",
-  "copy_internal_link": "El enlace interno ha sido copiado al portapapeles",
-  "internal_link_desc": "Un enlace interno es un enlace a un archivo o carpeta que puede ser accedido por usuarios con permiso de lectura al archivo o carpeta. ",
-  "share": "Compartir",
-  "share_link": "Compartir enlace",
-  "generate": "Generar",
-  "add_password_protection": "Agregar protección por contraseña",
-  "password": "Contraseña ",
-  "at_least_8_characters": "al menos 8 caracteres",
-  "password_again": "Repetir contraseña",
-  "add_auto_expiration": "Agregar vencimiento automático",
-  "days": "días",
-  "please_enter_password": "Ingresa una contraseña",
-  "greater_than_or_equal_to": "Mayor o igual que",
-  "less_than_or_equal_to": "Menor o igual que",
-  "set_permission": "Establecer permiso",
-  "preview_and_download": "Vista previa y descargar",
-  "preview_only": "Vista previa solamente",
-  "please_enter_valid_days": "Ingresa cantidad válida de días",
-  "please_enter_a_non-negative_integer": "Por favor, ingrese un número entero no negativo",
-  "please_enter_days": "Ingresa cantidad de días",
-  "password_is_too_short": "Contraseña demasiado corta",
-  "passwords_do_not_match": "Las contraseñas no concuerdan",
-  "return_to_wiki_page": "Volver a la página del Wiki",
-  "insert_network_image": "Insertar imágen desde la red",
-  "upload_local_image": "Subir imagen local",
-  "add_link": "Agregar enlace",
-  "file_history": "Historial del Archivo",
-  "history_version": "Historial de Versiones",
-  "back_to_viewer": "Volver al Visualizador",
-  "link_title": "Título del enlace",
-  "local_draft": "Borrador local",
-  "use_draft": "Usar borrador",
-  "delete_draft": "Eliminar borrador",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "Tienes un borrador sin guardar. ¿Deseas utilizarlo?",
-  "local_draft_saved": "Borrador local guardado",
-  "new_draft": "Nuevo Borrador",
-  "view_draft": "Ver Borrador",
-  "publish": "Publicar",
-  "this_file_has_a_draft": "Este archivo tiene un borrador", 
-  "delete": "Borrar",
-  "comments": "Comentarios",
-  "add_a_comment": "Agregar un comentario...",
-  "no_comment_yet": "No hay comentarios.",
+  "Bold": "Negrita",
+  "Italic": "Itálica",
+  "Inline_code": "Código",
+  "Header_one": "Encabezado 1",
+  "Header_two": "Encabezado 2",
+  "Header_three": "Encabezado 3",
+  "Header_four": "Encabezado 4",
+  "Header_five": "Encabezado 5",
+  "Header_six": "Encabezado 6",
+  "Paragraph": "Párrafo",
+  "Quote": "Cita",
+  "Ordered_list": "Lista Ordenada",
+  "Unordered_list": "Lista Desordenada",
+  "Check_list_item": "Check List Item",
+  "Insert_image": "Insertar Imagen",
+  "Insert_formula": "Insertar Fórmula",
+  "Formula": "Fórmula",
+  "Insert_file": "Insertar Archivo",
+  "Code": "Inline Code",
+  "Code_block": "Bloque de Código",
+  "Insert_link": "Insertar Enlace",
+  "Insert_table": "Insertar Tabla",
+  "Save": "Guardar",
+  "More": "Más",
+  "Invalid_url": "URL Inválida",
+  "Link_address": "Dirección del enlace",
+  "Image_address": "Dirección de la imagen",
+  "Submit": "Enviar",
+  "Cancel": "Cancelar",
+  "Switch_to_plain_text_editor": "Cambiar a editor de texto sin formato",
+  "Switch_to_rich_text_editor": "Cambiar a editor de texto enriquecido",
+  "Switch_to_viewer": "Cambiar a visualizador Markdown",
+  "Help": "Ayuda",
+  "Remove_table": "Eliminar tabla",
+  "Column": "Columna",
+  "Row": "Fila",
+  "Insert_row_before": "Insert row before",
+  "Insert_row_after": "Insert row after",
+  "Insert_column_before": "Insert column before",
+  "Insert_column_after": "Insert column after",
+  "Remove_row": "Remove row",
+  "Remove_column": "Remove column",
+  "Insert_row": "Insert row",
+  "Insert_column": "Insert column",
+  "Set_align": "Establecer alineación",
+  "Left": "Izquierda",
+  "Center": "Centrar",
+  "Right": "derecha",
+  "File_saved": "Archivo guardado",
+  "File_failed_to_save": "Fallo al guardar archivo",
+  "Star": "Add star",
+  "Unstar": "Remove star",
+  "Back_to_parent_directory": "Volver a la carpeta superior",
+  "Edit": "Editar",
+  "Copy": "Copiar",
+  "Copied": "Copiado",
+  "Internal_link": "Enlace interno",
+  "Copy_internal_link": "El enlace interno ha sido copiado al portapapeles",
+  "Internal_link_desc": "Un enlace interno es un enlace a un archivo o carpeta que puede ser accedido por usuarios con permiso de lectura al archivo o carpeta. ",
+  "Share": "Compartir",
+  "Share_link": "Compartir enlace",
+  "Generate": "Generar",
+  "Add_password_protection": "Agregar protección por contraseña",
+  "Password": "Contraseña ",
+  "At_least_8_characters": "al menos 8 caracteres",
+  "Password_again": "Repetir contraseña",
+  "Add_auto_expiration": "Agregar vencimiento automático",
+  "Days": "días",
+  "Please_enter_password": "Ingresa una contraseña",
+  "Greater_than_or_equal_to": "Mayor o igual que",
+  "Less_than_or_equal_to": "Menor o igual que",
+  "Set_permission": "Establecer permiso",
+  "Preview_and_download": "Vista previa y descargar",
+  "Preview_only": "Vista previa solamente",
+  "Please_enter_valid_days": "Ingresa cantidad válida de días",
+  "Please_enter_a_non-negative_integer": "Por favor, ingrese un número entero no negativo",
+  "Please_enter_days": "Ingresa cantidad de días",
+  "Password_is_too_short": "Contraseña demasiado corta",
+  "Passwords_do_not_match": "Las contraseñas no concuerdan",
+  "Return_to_wiki_page": "Volver a la página del Wiki",
+  "Insert_network_image": "Insertar imágen desde la red",
+  "Upload_local_image": "Subir imagen local",
+  "Add_link": "Agregar enlace",
+  "File_history": "Historial del Archivo",
+  "History_version": "Historial de Versiones",
+  "Back_to_viewer": "Volver al Visualizador",
+  "Link_title": "Título del enlace",
+  "Local_draft": "Borrador local",
+  "Use_draft": "Usar borrador",
+  "Delete_draft": "Eliminar borrador",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "Tienes un borrador sin guardar. ¿Deseas utilizarlo?",
+  "Local_draft_saved": "Borrador local guardado",
+  "New_draft": "Nuevo Borrador",
+  "View_draft": "Ver Borrador",
+  "Publish": "Publicar",
+  "This_file_has_a_draft": "Este archivo tiene un borrador",
+  "Delete": "Borrar",
+  "Comments": "Comentarios",
+  "Add_a_comment": "Agregar un comentario...",
+  "No_comment_yet": "No hay comentarios.",
   "Mark_as_Resolved": "Marcar como Resuelto",
-  "ask_for_review": "Solicitar revisión",
-  "review_already_exists": "La revisión ya existe",
-  "view_review": "Ver revisión",
-  "there_is_an_associated_review_with_this_file": "Hay una revisión asociada con este archivo",
-  "start_review": "Iniciar revisión",
-  "this_file_is_in_draft_stage": "Este archivo está en la etapa de borrador",
-  "this_file_is_in_review_stage": "Este archivo está en estado de revisión.",
-  "this_file_has_been_updated": "Este archivo ha sido actualizado.",
-  "refresh": "Refrescar",
-  "related_files": "archivos relacionados",
-  "related_file": "archivo relacionado",
-  "no_tags": "Sin etiquetas",
+  "Ask_for_review": "Solicitar revisión",
+  "Review_already_exists": "La revisión ya existe",
+  "View_review": "Ver revisión",
+  "There_is_an_associated_review_with_this_file": "Hay una revisión asociada con este archivo",
+  "Start_review": "Iniciar revisión",
+  "This_file_is_in_draft_stage": "Este archivo está en la etapa de borrador",
+  "This_file_is_in_review_stage": "Este archivo está en estado de revisión.",
+  "This_file_has_been_updated": "Este archivo ha sido actualizado.",
+  "Refresh": "Refrescar",
+  "Related_files": "archivos relacionados",
+  "Related_file": "archivo relacionado",
+  "No_tags": "Sin etiquetas",
   "Date": "Fecha",
   "Participants": "Participantes",
   "Meeting_note": "Nota de la reunión",
   "Chooser_document_type": "Elija el tipo de documento",
   "Empty": "Vacío",
-  "no_related_files": "Sin archivos relacionados",
-  "no_out_line": "No hay esquema",
+  "No_related_files": "Sin archivos relacionados",
+  "No_out_line": "No hay esquema",
   "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editar archivos en este navegador puede producir algunos problemas en el display.",
-  "no_document_improvement_suggestion": "No hay sugerencias para mejorar el documento",
+  "No_document_improvement_suggestion": "No hay sugerencias para mejorar el documento",
   "Hide_side_panel": "Ocultar panel lateral",
   "Show_side_panel": "Mostrar panel lateral",
   "Show_resolved_comments": "Mostrar comentarios resueltos",
@@ -131,30 +131,21 @@
   "Insert_library_image": "Insertar imagen desde la biblioteca",
   "Size": "Tamaño",
   "Location": "Ubicación",
-  "Last_Update": "Última actualización",
+  "Last_update": "Last update",
   "Tags": "Rótulos",
-  "Related_Files": "Archivos Relacionados",
   "Add_participants": "Agregar participantes",
-  "markdownLint": {
-    "missing_h1": {
-      "description": "No hay h1 en el documento",
-      "issue" : "Falta h1"
-    },
-    "heading_end_with_colon": {
-      "description": "Un encabezado no debe finalizar con el signo Dos Puntos",
-      "issue": "El encabezado finaliza con el signo Dos Puntos"
-    },
-    "heading_increase_irregular": {
-      "description": "Los niveles del encabezado sólo deben incrementarse de a uno por vez",
-      "issue": "Problema con nivel de encabezado"
-    }
-  },
+  "Clear_format": "Clear format",
+  "Image_address_invalid": "Image address invalid",
   "Shortcut_help": "Ayuda de atajos",
+  "Link_address_required": "Link address required",
+  "Link_address_invalid": "Link address invalid",
+  "Link_title_required": "Link title required",
+  "Blank_title_not_allowed": "Blank title not allowed",
   "userHelp": {
     "title": "Atajos de teclado",
     "userHelpData": [
       {
-        "shortcutType":"Listar atajos",
+        "shortcutType": "Listar atajos",
         "shortcutData": {
           "Make_list": "Crear lista",
           "Make_ordered_list": "Crear lista ordenada",
@@ -162,7 +153,8 @@
           "Insert_child_in_item": "Insert child in item",
           "Increase_depth": "Increase depth"
         }
-      }, {
+      },
+      {
         "shortcutType": "Head shortcuts",
         "shortcutData": {
           "Heading_1": "Encabezado 1",
@@ -172,7 +164,8 @@
           "Heading_5": "Encabezado 5",
           "Heading_6": "Encabezado 6"
         }
-      }, {
+      },
+      {
         "shortcutType": "Code block shortcuts",
         "shortcutData": {
           "Make_code_block": "Crear bloque de código",
@@ -180,37 +173,43 @@
           "Escape_code_block": "Escape code block",
           "Insert_indent": "Insert indent"
         }
-      }, {
+      },
+      {
         "shortcutType": "Block quote shortcuts",
         "shortcutData": {
-          "Make_Block_quote": "Make Block quote",
-          "Escape_Block_quote": "Escape Block quote"
+          "Make_block_quote": "Make block quote",
+          "Escape_block_quote": "Escape block quote"
         }
-      }, {
+      },
+      {
         "shortcutType": "Atajos de tabla",
         "shortcutData": {
-          "Insert_Table_Row": "Insertar fila de tabla",
+          "Insert_table_row": "Insert table tow",
           "Escape_table": "Escape table"
         }
-      }, {
+      },
+      {
         "shortcutType": "Atajos de fórmula",
         "shortcutData": {
-          "Insert_Formula": "Insertar Fórmula"
+          "Insert_formula": "Insert formula"
         }
-      }, {
-        "shortcutType":"Inline shortcuts",
+      },
+      {
+        "shortcutType": "Inline shortcuts",
         "shortcutData": {
           "Bold": "Negrita",
           "Italic": "Itálica",
-          "Italic_Bold": "Negrita itálica",
+          "Italic_bold": "Italic bold",
           "Inline_code": "Inline code"
         }
-      }, {
+      },
+      {
         "shortcutType": "Guardar atajos",
         "shortcutData": {
           "Save_file": "Guardar archivo"
         }
-      }, {
+      },
+      {
         "shortcutType": "Atajos de imagen",
         "shortcutData": {
           "Paste_screen_shot": "Pegar captura de pantalla",
@@ -218,5 +217,7 @@
         }
       }
     ]
-  }
+  },
+  "Select_field": "Select field",
+  "Font_style": "Font style"
 }
