--- a/media/locales/ru/seafile-editor.json
+++ b/media/locales/ru/seafile-editor.json
@@ -1,126 +1,126 @@
 {
-  "bold": "Полужирный",
-  "italic": "Курсив",
-  "inline_code": "Код",
-  "header_one": "Заголовок 1",
-  "header_two": "Заголовок 2",
-  "header_three": "Заголовок 3",
-  "header_four": "Заголовок 4",
-  "header_five": "Заголовок 5",
-  "header_six": "Заголовок 6",
-  "paragraph": "Параграф",
-  "quote": "Цитата",
-  "ordered_list": "Нумерованный список",
-  "unordered_list": "Маркированный список",
-  "check_list_item": "Проверка элемента списка",
-  "insert_image": "Вставить изображение",
-  "insert_formula": "Вставить формулу",
-  "formula": "Формула",
-  "insert_file": "Вставить файл",
-  "code": "Встроенный код",
-  "code_block": "Блок кода",
-  "insert_link": "Вставить ссылку",
-  "insert_table": "Вставить таблицу",
-  "save": "Сохранить",
-  "more": "Подробнее",
-  "invalid_url": "Недопустимый URL",
-  "link_address": "Адрес ссылки",
-  "image_address": "Адрес изображения",
-  "submit": "Отправить",
-  "cancel": "Отменить",
-  "switch_to_plain_text_editor": "Переключиться на обычный текстовый редактор",
-  "switch_to_rich_text_editor": "Переключиться на визуальный редактор",
-  "switch_to_viewer": "Переключиться на просмотр Markdown",
-  "help": "Помощь",
-  "remove_table": "Удалить таблицу",
-  "column": "Столбец",
-  "row": "Строка",
-  "Insert_Row_Before": "Вставить строку перед",
-  "Insert_Row_After": "Вставить строку после",
-  "Insert_Column_Before": "Вставить столбец перед",
-  "Insert_Column_After": "Вставить столбец после",
-  "Remove_Row": "Удалить строку",
-  "Remove_Column": "Удалить столбец",
-  "Insert_Row": "Вставить строку",
-  "Insert_Column": "Вставить столбец",
-  "set_align": "Установить выравнивание",
-  "left": "Слева",
-  "center": "По центру",
-  "right": "Справа",
-  "file_saved": "Файл сохранён.",
-  "file_failed_to_save": "Не удалось сохранить файл.",
-  "star": "Добавить пометку",
-  "unstar": "Удалить пометку",
-  "back_to_parent_directory":"Вернуться в родительский каталог",
-  "edit": "Редактировать",
-  "copy": "Копировать",
-  "copied": "Скопировано",
-  "internal_link": "Внутренняя ссылка",
-  "copy_internal_link": "Внутренняя ссылка скопирована в буфер обмена",
-  "internal_link_desc": "Внутренняя ссылка - это ссылка на файл или папку, к которым могут обращаться пользователи с правами на чтение файла или папки.",
-  "share": "Общий доступ",
-  "share_link": "Общедоступная ссылка",
-  "generate": "Создать",
-  "add_password_protection": "Защитить паролем",
-  "password": "Пароль",
-  "at_least_8_characters": "не менее 8 символов",
-  "password_again": "Подтвердите пароль",
-  "add_auto_expiration": "Добавить автоистечение срока действия",
-  "days": "дней",
-  "please_enter_password": "Пожалуйста, введите пароль",
-  "greater_than_or_equal_to": "Больше или равно",
-  "less_than_or_equal_to": "Меньше или равно",
-  "set_permission": "Установить разрешения",
-  "preview_and_download": "Предпросмотр и скачивание",
-  "preview_only": "Только предпросмотр",
-  "please_enter_valid_days": "Пожалуйста, введите действительные дни",
-  "please_enter_a_non-negative_integer": "Пожалуйста, введите неотрицательное целое число",
-  "please_enter_days": "Пожалуйста, введите дни",
-  "password_is_too_short": "Пароль слишком короткий",
-  "passwords_do_not_match": "Пароли не совпадают",
-  "return_to_wiki_page": "Вернуться на страницу Вики",
-  "insert_network_image": "Вставить удалённое изображение",
-  "upload_local_image": "Загрузить локальное изображение",
-  "add_link": "Добавить ссылку",
-  "file_history": "История файла",
-  "history_version": "История версий",
-  "back_to_viewer": "Вернуться к просмотру",
-  "link_title": "Название ссылки",
-  "local_draft": "Локальный черновик",
-  "use_draft": "Использовать черновик",
-  "delete_draft": "Удалить черновик",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохранённый черновик. Хотите использовать его?",
-  "local_draft_saved": "Локальный черновик сохранён",
-  "new_draft": "Новый черновик",
-  "view_draft": "Просмотр черновика",
-  "publish": "Опубликовать",
-  "this_file_has_a_draft": "Этот файл имеет черновик.", 
-  "delete": "Удалить",
-  "comments": "Комментарии",
-  "add_a_comment": "Добавить комментарий...",
-  "no_comment_yet": "Комментариев пока нет.",
+  "Bold": "Полужирный",
+  "Italic": "Курсив",
+  "Inline_code": "Код",
+  "Header_one": "Заголовок 1",
+  "Header_two": "Заголовок 2",
+  "Header_three": "Заголовок 3",
+  "Header_four": "Заголовок 4",
+  "Header_five": "Заголовок 5",
+  "Header_six": "Заголовок 6",
+  "Paragraph": "Параграф",
+  "Quote": "Цитата",
+  "Ordered_list": "Нумерованный список",
+  "Unordered_list": "Маркированный список",
+  "Check_list_item": "Проверка элемента списка",
+  "Insert_image": "Вставить изображение",
+  "Insert_formula": "Вставить формулу",
+  "Formula": "Формула",
+  "Insert_file": "Вставить файл",
+  "Code": "Встроенный код",
+  "Code_block": "Блок кода",
+  "Insert_link": "Вставить ссылку",
+  "Insert_table": "Вставить таблицу",
+  "Save": "Сохранить",
+  "More": "Подробнее",
+  "Invalid_url": "Недопустимый URL",
+  "Link_address": "Адрес ссылки",
+  "Image_address": "Адрес изображения",
+  "Submit": "Отправить",
+  "Cancel": "Отменить",
+  "Switch_to_plain_text_editor": "Переключиться на обычный текстовый редактор",
+  "Switch_to_rich_text_editor": "Переключиться на визуальный редактор",
+  "Switch_to_viewer": "Переключиться на просмотр Markdown",
+  "Help": "Помощь",
+  "Remove_table": "Удалить таблицу",
+  "Column": "Столбец",
+  "Row": "Строка",
+  "Insert_row_before": "Insert row before",
+  "Insert_row_after": "Insert row after",
+  "Insert_column_before": "Insert column before",
+  "Insert_column_after": "Insert column after",
+  "Remove_row": "Remove row",
+  "Remove_column": "Remove column",
+  "Insert_row": "Вставить строку",
+  "Insert_column": "Вставить столбец",
+  "Set_align": "Установить выравнивание",
+  "Left": "Слева",
+  "Center": "По центру",
+  "Right": "Справа",
+  "File_saved": "Файл сохранён.",
+  "File_failed_to_save": "Не удалось сохранить файл.",
+  "Star": "Добавить пометку",
+  "Unstar": "Удалить пометку",
+  "Back_to_parent_directory": "Вернуться в родительский каталог",
+  "Edit": "Редактировать",
+  "Copy": "Копировать",
+  "Copied": "Скопировано",
+  "Internal_link": "Внутренняя ссылка",
+  "Copy_internal_link": "Внутренняя ссылка скопирована в буфер обмена",
+  "Internal_link_desc": "Внутренняя ссылка - это ссылка на файл или папку, к которым могут обращаться пользователи с правами на чтение файла или папки.",
+  "Share": "Общий доступ",
+  "Share_link": "Общедоступная ссылка",
+  "Generate": "Создать",
+  "Add_password_protection": "Защитить паролем",
+  "Password": "Пароль",
+  "At_least_8_characters": "не менее 8 символов",
+  "Password_again": "Подтвердите пароль",
+  "Add_auto_expiration": "Добавить автоистечение срока действия",
+  "Days": "дней",
+  "Please_enter_password": "Пожалуйста, введите пароль",
+  "Greater_than_or_equal_to": "Больше или равно",
+  "Less_than_or_equal_to": "Меньше или равно",
+  "Set_permission": "Установить разрешения",
+  "Preview_and_download": "Предпросмотр и скачивание",
+  "Preview_only": "Только предпросмотр",
+  "Please_enter_valid_days": "Пожалуйста, введите действительные дни",
+  "Please_enter_a_non-negative_integer": "Пожалуйста, введите неотрицательное целое число",
+  "Please_enter_days": "Пожалуйста, введите дни",
+  "Password_is_too_short": "Пароль слишком короткий",
+  "Passwords_do_not_match": "Пароли не совпадают",
+  "Return_to_wiki_page": "Вернуться на страницу Вики",
+  "Insert_network_image": "Вставить удалённое изображение",
+  "Upload_local_image": "Загрузить локальное изображение",
+  "Add_link": "Добавить ссылку",
+  "File_history": "История файла",
+  "History_version": "История версий",
+  "Back_to_viewer": "Вернуться к просмотру",
+  "Link_title": "Название ссылки",
+  "Local_draft": "Локальный черновик",
+  "Use_draft": "Использовать черновик",
+  "Delete_draft": "Удалить черновик",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохранённый черновик. Хотите использовать его?",
+  "Local_draft_saved": "Локальный черновик сохранён",
+  "New_draft": "Новый черновик",
+  "View_draft": "Просмотр черновика",
+  "Publish": "Опубликовать",
+  "This_file_has_a_draft": "Этот файл имеет черновик.",
+  "Delete": "Удалить",
+  "Comments": "Комментарии",
+  "Add_a_comment": "Добавить комментарий...",
+  "No_comment_yet": "Комментариев пока нет.",
   "Mark_as_Resolved": "Отметить как решённый",
-  "ask_for_review": "Спросить отзыв",
-  "review_already_exists": "Отзыв уже существует",
-  "view_review": "Просмотр отзыва",
-  "there_is_an_associated_review_with_this_file": "Есть связанный отзыв с этим файлом.",
-  "start_review": "Начать отзыв",
-  "this_file_is_in_draft_stage": "Этот файл находится в стадии черновика.",
-  "this_file_is_in_review_stage": "Этот файл находится на стадии проверки.",
-  "this_file_has_been_updated": "Этот файл был обновлён.",
-  "refresh": "Обновить",
-  "related_files": "связанные файлы",
-  "related_file": "связанный файл",
-  "no_tags": "Нет меток",
+  "Ask_for_review": "Спросить отзыв",
+  "Review_already_exists": "Отзыв уже существует",
+  "View_review": "Просмотр отзыва",
+  "There_is_an_associated_review_with_this_file": "Есть связанный отзыв с этим файлом.",
+  "Start_review": "Начать отзыв",
+  "This_file_is_in_draft_stage": "Этот файл находится в стадии черновика.",
+  "This_file_is_in_review_stage": "Этот файл находится на стадии проверки.",
+  "This_file_has_been_updated": "Этот файл был обновлён.",
+  "Refresh": "Обновить",
+  "Related_files": "связанные файлы",
+  "Related_file": "связанный файл",
+  "No_tags": "Нет меток",
   "Date": "Дата",
   "Participants": "Участники",
   "Meeting_note": "Заметка о встрече",
   "Chooser_document_type": "Выбор типа документа",
   "Empty": "Пусто",
-  "no_related_files": "Нет связанных файлов",
-  "no_out_line": "Нет контура",
+  "No_related_files": "Нет связанных файлов",
+  "No_out_line": "Нет контура",
   "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Изменение файлов в этом браузере может привести к небольшим проблемам с отображением.",
-  "no_document_improvement_suggestion": "Нет предложений по улучшению документа",
+  "No_document_improvement_suggestion": "Нет предложений по улучшению документа",
   "Hide_side_panel": "Скрыть боковую панель",
   "Show_side_panel": "Показать боковую панель",
   "Show_resolved_comments": "Показать разрешённые комментарии",
@@ -131,30 +131,21 @@
   "Insert_library_image": "Вставить изображение библиотеки",
   "Size": "Размер",
   "Location": "Местонахождение",
-  "Last_Update": "Последнее обновление",
+  "Last_update": "Последнее обновление",
   "Tags": "Метки",
-  "Related_Files": "Связанные файлы",
   "Add_participants": "Добавить участников",
-  "markdownLint": {
-    "missing_h1": {
-      "description": "В документе нет h1",
-      "issue" : "Отсутствует h1"
-    },
-    "heading_end_with_colon": {
-      "description": "Завершающая пунктуация в заголовке не должна быть двоеточием",
-      "issue": "Заголовок заканчивается двоеточием"
-    },
-    "heading_increase_irregular": {
-      "description": "Уровни заголовков должны увеличиваться только на один уровень за раз",
-      "issue": "Проблема уровня заголовка"
-    }
-  },
+  "Clear_format": "Очистить формат",
+  "Image_address_invalid": "Image address invalid",
   "Shortcut_help": "Справка по горячим клавишам",
+  "Link_address_required": "Link address required",
+  "Link_address_invalid": "Link address invalid",
+  "Link_title_required": "Link title required",
+  "Blank_title_not_allowed": "Blank title not allowed",
   "userHelp": {
     "title": "Горячие клавиши",
     "userHelpData": [
       {
-        "shortcutType":"Список горячих клавиш",
+        "shortcutType": "Список горячих клавиш",
         "shortcutData": {
           "Make_list": "Создать список",
           "Make_ordered_list": "Создать нумерованный список",
@@ -162,7 +153,8 @@
           "Insert_child_in_item": "Вставить дочерний в элемент",
           "Increase_depth": "Увеличить глубину"
         }
-      }, {
+      },
+      {
         "shortcutType": "Горячие клавиши для заголовка",
         "shortcutData": {
           "Heading_1": "Заголовок 1",
@@ -172,7 +164,8 @@
           "Heading_5": "Заголовок 5",
           "Heading_6": "Заголовок 6"
         }
-      }, {
+      },
+      {
         "shortcutType": "Горячие клавиши для кода",
         "shortcutData": {
           "Make_code_block": "Создать блок кода",
@@ -180,37 +173,43 @@
           "Escape_code_block": "Выделить блок кода",
           "Insert_indent": "Вставить отступ"
         }
-      }, {
+      },
+      {
         "shortcutType": "Горячие клавиши для блока цитаты",
         "shortcutData": {
-          "Make_Block_quote": "Создать блок цитаты",
-          "Escape_Block_quote": "Выделить блок цитаты"
+          "Make_block_quote": "Make block quote",
+          "Escape_block_quote": "Escape block quote"
         }
-      }, {
+      },
+      {
         "shortcutType": "Горячие клавиши для таблицы",
         "shortcutData": {
-          "Insert_Table_Row": "Вставить строку таблицы",
+          "Insert_table_row": "Insert table tow",
           "Escape_table": "Выделить таблицу"
         }
-      }, {
+      },
+      {
         "shortcutType": "Горячие клавиши для формул",
         "shortcutData": {
-          "Insert_Formula": "Вставить формулу"
+          "Insert_formula": "Вставить формулу"
         }
-      }, {
-        "shortcutType":"Встроенные горячие клавиши",
+      },
+      {
+        "shortcutType": "Встроенные горячие клавиши",
         "shortcutData": {
           "Bold": "Полужирный",
           "Italic": "Курсив",
-          "Italic_Bold": "Курсив полужирный",
+          "Italic_bold": "Italic bold",
           "Inline_code": "Встроенный код"
         }
-      }, {
+      },
+      {
         "shortcutType": "Сохранить горячие клавиши",
         "shortcutData": {
           "Save_file": "Сохранить файл"
         }
-      }, {
+      },
+      {
         "shortcutType": "Горячие клавиши для изображений",
         "shortcutData": {
           "Paste_screen_shot": "Вставить скриншот",
@@ -218,5 +217,7 @@
         }
       }
     ]
-  }
+  },
+  "Select_field": "Select field",
+  "Font_style": "Font style"
 }
